--- a/index.html
+++ b/index.html
@@ -12,48 +12,52 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-      <script type="text/javascript" src="popup.js"></script>
       <title>Tarea3</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand">
-      <div class="container">
-          <p class="navbar-brand"></p>
-          <ul class="navbar-nav d-flex justify-content-end">
-              <li class="navbar-item m-4 "><a href="index.html" class="navb-opt nav-link active ">Inicio</a></li>
-              <li class="navbar-item m-4 "><a class="navb-opt nav-link active ">Nosotros</a></li>
-              <li class="navbar-item m-4 "><a class="navb-opt nav-link active ">Adopta</a></li>
-              <li class="navbar-item m-4 "><a class="navb-opt nav-link active ">Colabora</a></li>
-              <li class="navbar-item m-4 "><a class="navb-opt nav-link active ">Servicios</a></li>
-              <li class="navbar-item m-4 "><a href="contact.html" class="navb-opt nav-link active ">Contáctanos</a></li>
-          </ul>                                                     
-      </div>
+    
+    <nav class="navbar navbar-expand-md nav-clase">
+      <button class="navbar-toggler" data-toggle="collapse" type="button" data-target="#colapsable">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="colapsable" class="collapsable navbar-collapse">
+        <ul class="navbar-nav offset-3 " aria-controls="colapsable">
+          <li class="navbar-item my-4 mx-5  "><a href="index.html" class="navb-opt nav-link active ">Inicio</a></li>
+          <li class="navbar-item my-4 mx-5 "><a class="navb-opt nav-link active ">Nosotros</a></li>
+          <li class="navbar-item my-4 mx-5 "><a class="navb-opt nav-link active ">Adopta</a></li>
+          <li class="navbar-item my-4 mx-5 "><a class="navb-opt nav-link active ">Colabora</a></li>
+          <li class="navbar-item my-4 mx-5 "><a class="navb-opt nav-link active ">Servicios</a></li>
+          <li class="navbar-item my-4 mx-5 "><a href="contact.html" class="navb-opt nav-link active ">Contáctanos</a></li>
+        </ul>                                                  
+      </div>   
     </nav>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div id="first" class="carousel-item active citem">
-          <img src="img/cat.jpg" class="d-block w-100 cimg" alt="One">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+    <div class="container-fluid p-0 w-100 m-0">
+      <div id="carouselExampleControls" class="carousel slide carousel-tamanio" data-ride="carousel">
+        <div class="carousel-inner">
+          <div id="first" class="carousel-item active citem">
+            <img src="img/cat.jpg" class="d-block w-100 cimg" alt="One">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item citem">
-          <img src="img/dog.jpg" class="d-block w-100 cimg" alt="Two">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+          <div class="carousel-item citem">
+            <img src="img/dog.jpg" class="d-block w-100 cimg" alt="Two">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item citem">
-          <img src="img/perros.jpg" class="d-block w-100 cimg" alt="Three">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+          <div class="carousel-item citem">
+            <img src="img/perros.jpg" class="d-block w-100 cimg" alt="Three">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item citem">
-          <img src="img/Croc_inter.jpg" class="d-block w-100 cimg">
+          <div class="carousel-item citem">
+            <img src="img/Croc_inter.jpg" class="d-block w-100 cimg">
+          </div>
         </div>
       </div>
     </div>
@@ -69,7 +73,7 @@
     <hr>
     <section class="container-fluid">
       <div class="row">
-        <div class="contenido col  ">
+        <div class="contenido my-5 mx-lg-5 mx-md-3 mx-sm-2 mx-3 ">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat blandit risus sed congue. 
             Integer vel volutpat lectus, quis convallis mauris. Mauris dapibus, lorem et fermentum laoreet, 
@@ -110,43 +114,41 @@
         </div>
       </div>
     </section>
-    <h2 class="mx-5 mt-4 card-H">Conoce a nuestros rescatados en adopción</h2>
+    <h2 class="mx-lg-5 mx-md-3 mx-sm-2 mx-3 card-H">Conoce a nuestros rescatados en adopción</h2>
     <p class="mb-4 mx-5">Y elige uno para convertir en tu nuevo mejor amigo</p>
-    <div class="container-fluid m-4 ">
+    <div class="container-fluid  m-0 p-0">
       <div class="row">
-        <div class="esp col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 col-sm-3 card-t card m-4">
           <img src="img/dog-card.jpg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#juanpopup" href="#" class="card-co"><h5 class="card-title">Juan</h5></button>
           </div>
         </div>
-        <div class="col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 col-sm-8 card-t card m-4">
           <img src="img/dog-card.jpg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#juanpopup" href="#" class="card-co"><h5 class="card-title">Juan</h5></button>
           </div>
         </div>
-        <div class="col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 col-sm-8 card-t card m-4">
           <img src="img/pitbull-2.jpeg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#thirdModal" href="#" class="card-co"><h5 class="card-title">Princesita</h5></button>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 m-4 col-sm-8 card-t card ">
           <img src="img/wiener_dog_fat.jpeg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#secondModal" href="#" class="card-co"><h5 class="card-title">Pai de Limón</h5></button>
           </div>
         </div>
-        <div class="col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 card-t col-sm-8 card m-4">
           <img src="img/dog-card.jpg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#juanpopup" href="#" class="card-co"><h5 class="card-title">Juan</h5></button>
           </div>
         </div>
-        <div class="col-2 card-t card m-4">
+        <div class="col-lg-3 col-md-3 col-sm-8 card-t card m-4">
           <img src="img/dog-card.jpg" class="card-img-top card-t-img" alt="...">
           <div class="card-body">
             <button data-toggle="modal" data-target="#juanpopup" href="#" class="card-co"><h5 class="card-title">Juan</h5></button>
@@ -154,7 +156,7 @@
         </div>
       </div>
     </div>
-    <div id="juanpopup" class="modal fade" tabindex="-1" aria-labelledby="uno" aria-hidden="true">
+    <div id="juanpopup" class="modal fade modal-clase" tabindex="-1" aria-labelledby="uno" aria-hidden="true">
       <div class="modal-dialog">
         <div class="mod-tamanio modal-content">
           <div class=" modal-header d-inline">
@@ -226,19 +228,19 @@
         </div>
       </div>
     </div>
-    <div id="secondModal" class="modal fade" tabindex="-1" aria-labelledby="dos" aria-hidden="true">
+    <div id="secondModal" class="modal fade modal-class" tabindex="-1" aria-labelledby="dos" aria-hidden="true">
       <div class="modal-dialog">
         <div class="mod-tamanio modal-content">
           <div class=" modal-header d-inline">
             <h5 class="modal-title text-center " id="dos">Pai de Limón</h5>
-              <!--<button type="button" class=" close" data-dismiss="modal" aria-label="Close">
+              <button type="button" class=" close" data-dismiss="modal" aria-label="Close">
                 <span class="x-popup" aria-hidden="true">&times;</span>
-              </button>-->
+              </button>
           </div>
           <div class="modal-body">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-8">
+                <div class="col-7">
                   <div id="modal-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active citem">
@@ -266,7 +268,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="col-4">
+                <div class="col-5">
                   <table class="table">
                     <thead>
                       <tr>
@@ -275,7 +277,7 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Nombre</td>
+                        <td class="td-tamanio">Nombre</td>
                         <td>Pai de Limón</td>
                       </tr>
                       <tr>
@@ -326,7 +328,7 @@
         </div>
       </div>
     </div>
-    <div id="thirdModal" class="modal fade" tabindex="-1" aria-labelledby="tres" aria-hidden="true">
+    <div id="thirdModal" class="modal fade modal-class" tabindex="-1" aria-labelledby="tres" aria-hidden="true">
       <div class="modal-dialog">
         <div class="mod-tamanio modal-content">
           <div class=" modal-header d-inline">
